<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/book5"
    android:backgroundTint="#D3D2D3"
    android:backgroundTintMode="multiply"
    android:orientation="vertical"
    android:paddingTop="55dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginBottom="25dp"

        android:fontFamily="cursive"
        android:paddingVertical="35dp"
        android:text="@string/BookMart"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="60sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/first_name"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/F_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/colorWhite"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="5dp"
        android:textColorLink="#673AB7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="15dp"
        android:text="@string/last_name"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/L_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:textColor="@color/colorWhite"
        android:inputType="text"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="5dp"
        android:textColorLink="#673AB7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="15dp"
        android:text="@string/email_register"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/Email2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/email_register"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:padding="0dp"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="5dp"
        android:textColorLink="#673AB7" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="15dp"
        android:text="@string/PasswordText"
        android:textColor="@color/colorBlack" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/PasswordHint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="0dp"
        android:textColor="@color/colorWhite"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="5dp"
        android:textColorLink="#673AB7" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_login"
        android:onClick="add_entery"
        android:text="@string/button_register"
        android:textColor="@color/colorWhite" />

</LinearLayout>
